--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,15 @@
 {
     "require": {
         "bramus/router": "~1.4"
+    },
+    
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/",
+            "Controller\\": "controller/",
+            "Model\\": "model/",
+            "Service\\":"service/"
+        }
     }
+
 }
